data/derived/comb/progs/unify/prog8687.ml.out
Characters 62-64:
  else (n mod 10)::[]::digitsOfInt n/10;;
                   ^^
Error: This expression has type 'a list
       but an expression was expected of type int
